--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ authors = ["Mazdak Farrokhzad <twingoow@gmail.com>"]
 maplit = "1.0.1"
 combine = "3.5.1"
 itertools = "0.7.8"
+
+[dev-dependencies]
+proptest = "0.8.6"
